--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,7 +64,7 @@ SET(CMAKE_CXX_STANDARD 11)
 #SET(CMAKE_CXX_STANDARD_REQUIRED ON)
 #SET(CMAKE_CXX_EXTENSIONS OFF)
 
-#SET(CMAKE_C_STANDARD 99)
+SET(CMAKE_C_STANDARD 99)
 #SET(CMAKE_C_STANDARD_REQUIRED ON)
 #SET(CMAKE_C_EXTENSIONS OFF)
 
