--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,13 +55,13 @@ else()
 	endif()
 endif()
 
-#if(OPENMP_FOUND)
-#	message("openMP found")
-#	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
-#	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-#else()
-#	message("openMP not found")
-#endif()
+if(OPENMP_FOUND)
+	message("openMP found")
+	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+else()
+	message("openMP not found")
+endif()
 
 option(BUILD_STATIC "Build a static library" OFF)
 include_directories(include ${OPENGL_INCLUDE_DIR})
